adding --add-exports compiler directived for Neo4j to pom